fix: same color for both light and dark mode

--- a/core/src/components/text-field/text-field-vars.scss
+++ b/core/src/components/text-field/text-field-vars.scss
@@ -24,7 +24,7 @@
   --tds-text-field-bar: var(--tds-blue-400);
 
   //helper
-  --tds-text-field-helper: var(--tds-grey-700);
+  --tds-text-field-helper: var(--tds-grey-600);
 
   //error
   --tds-text-field-border-bottom-error: var(--tds-negative);
